--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <p><b>Email:</b> <span id="email"></span></p>
       <p><b>Username:</b> <span id="uname"></span></p>
       <p><b>Password:</b> <span id="pass"></span></p>
-      <p><b>Link Login:</b> <a href="https://dieeonlypanelprivate.syahxmasvill.my.id" target="_blank" style="color:#ff073a;">Klik di sini</a></p>
+      <p><b>Link Login:</b> <a href="https://pengumuman-reseller-panel.vercel.app" target="_blank" style="color:#ff073a;">Klik di sini</a></p>
       <p><b>Paket RAM:</b> <span id="ram"></span></p>
     </div>
     <button onclick="goBack()">⬅ Kembali</button>
@@ -217,7 +217,7 @@ async function login() {
   const paket = document.getElementById('paket').value;
 
   if (!username || !password || !paket) return alert('Isi semua data terlebih dahulu!');
-  if (password !== 'buyresellerpanelv1byresellergaming') return alert('Password salah!');
+  if (password !== 'ResellerPanelByResming#2025!') return alert('Password salah!');
 
   document.getElementById('step1').classList.add('hidden');
   document.getElementById('loadingStep').classList.remove('hidden');
